Remove footer emoji and fix Filter link

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -144,7 +144,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'root-landing' %}">
-                <i class="fas fa-link me-2"></i>LostLink Kenya
+                LostLink Kenya
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -214,17 +214,17 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <a class="navbar-brand mb-3 d-block" href="{% url 'root-landing' %}">
-                        <i class="fas fa-link me-2"></i>LostLink Kenya
+                        LostLink Kenya
                     </a>
                     <p class="text-muted">
                         We help people reunite with their lost belongings through a community-driven platform.
                         Simple, secure, and effective.
                     </p>
                     <div class="mt-4">
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon">Twitter</a>
+                        <a href="#" class="social-icon">Facebook</a>
+                        <a href="#" class="social-icon">Instagram</a>
+                        <a href="#" class="social-icon">LinkedIn</a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
@@ -248,9 +248,9 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <h5>Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="text-muted mb-2"><i class="fas fa-map-marker-alt me-2"></i> Nairobi, Kenya</li>
-                        <li class="text-muted mb-2"><i class="fas fa-envelope me-2"></i> support@lostlink.ke</li>
-                        <li class="text-muted mb-2"><i class="fas fa-phone me-2"></i> +254 700 000 000</li>
+                        <li class="text-muted mb-2">Nairobi, Kenya</li>
+                        <li class="text-muted mb-2">support@lostlink.ke</li>
+                        <li class="text-muted mb-2">+254 700 000 000</li>
                     </ul>
                 </div>
             </div>
@@ -259,7 +259,7 @@
                     <p class="text-muted mb-0">&copy; {% now "Y" %} LostLink Kenya. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="text-muted mb-0">Designed with <i class="fas fa-heart text-danger"></i> in Kenya</p>
+                    <p class="text-muted mb-0">Designed with love in Kenya</p>
                 </div>
             </div>
         </div>
