--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -185,7 +185,7 @@
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary text-white ms-2 px-4"
+                        <a class="nav-link btn btn-light text-dark ms-2 px-4"
                             href="{% url 'register' %}">Register</a>
                     </li>
                     {% endif %}
@@ -221,10 +221,10 @@
                         Simple, secure, and effective.
                     </p>
                     <div class="mt-4">
-                        <a href="#" class="social-icon">Twitter</a>
-                        <a href="#" class="social-icon">Facebook</a>
-                        <a href="#" class="social-icon">Instagram</a>
-                        <a href="#" class="social-icon">LinkedIn</a>
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
@@ -248,9 +248,9 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <h5>Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="text-muted mb-2">Nairobi, Kenya</li>
-                        <li class="text-muted mb-2">support@lostlink.ke</li>
-                        <li class="text-muted mb-2">+254 700 000 000</li>
+                        <li class="text-muted mb-2"><i class="fas fa-map-marker-alt me-2"></i> Nairobi, Kenya</li>
+                        <li class="text-muted mb-2"><i class="fas fa-envelope me-2"></i> support@lostlink.ke</li>
+                        <li class="text-muted mb-2"><i class="fas fa-phone me-2"></i> +254 700 000 000</li>
                     </ul>
                 </div>
             </div>
