--- a/blog/templates/blog/Home.html
+++ b/blog/templates/blog/Home.html
@@ -336,18 +336,17 @@
     .carousel-slide {
       min-width: 100%;
       position: relative;
-      height: 350px;
+      height: 400px;
       overflow: hidden;
-      aspect-ratio: 16 / 9;
     }
 
     .carousel-slide img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       object-position: center;
       display: block;
-      filter: brightness(1.02) contrast(1.05);
+      background-color: #f9fafb;
     }
 
     .slide-overlay {
@@ -865,7 +864,7 @@
       }
 
       .carousel-slide {
-        height: 250px;
+        height: 300px;
       }
 
       .carousel-btn {
