--- a/blog/templates/blog/Home.html
+++ b/blog/templates/blog/Home.html
@@ -343,7 +343,7 @@
     .carousel-slide img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
       object-position: center;
       display: block;
       background-color: #f9fafb;
